tests/snapshots/cli_help__cli_help_links.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
A task's link (its linked resource): list, add, change or delete it. Microsoft To Do allows one per task; `tasks links` also lists the URLs in the notes

Usage: ms-todo links [OPTIONS] <COMMAND>

Commands:
  list    The task's link (its linked resource), if it has one
  add     Give the task a link. It's refused when the task has one already: Microsoft To Do allows one per task
  edit    Change the task's link. Microsoft To Do can set a field but not clear one
  delete  Delete the task's link. Asks first in a terminal; anywhere else it needs --yes
  help    Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
