tests/snapshots/cli_help__cli_help_links_edit.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Change the task's link. Microsoft To Do can set a field but not clear one

Usage: ms-todo links edit [OPTIONS] <TASK> [LINK]

Arguments:
  <TASK>  The task's ID from `tasks list`, or its exact title when --list is given
  [LINK]  Which link, by number from 1 or ID [default: the task's only one]

Options:
      --format <FORMAT>        Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --list <NAME|ID>         Look for the task in this list (exact name or ID), which also lets TASK be an exact title
      --instance <NAME>        Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --url <URL>              A new URL
      --fresh                  Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --name <NAME>            What the link is called (its display name)
      --app <APP>              The app it belongs to (Microsoft To Do requires one) [default on add: ms-todo]
      --quiet                  Print nothing on stderr but errors: no notes and no progress
      --external-id <ID>       The item's ID in that app
      --no-color               No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>    Read this command in this context (from config.toml) rather than the active one; `none` for every list
      --dry-run                Show what would change without changing anything
      --idempotency-key <KEY>  Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2
  -h, --help                   Print help
  -V, --version                Print version
