tests/snapshots/cli_help__cli_help_lists.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Your task lists, and which folder each is in

Usage: ms-todo lists [OPTIONS] <COMMAND>

Commands:
  list    Every task list, folder by folder, then those in no folder
  show    One list, with its open and completed task counts
  create  Make a new list, in a folder if --folder says so
  rename  Rename a list. The default list (Tasks) and Flagged Emails can't be
  delete  Delete a list and every task in it. Asks first in a terminal; anywhere else it needs --yes. Only an empty list's delete can be undone
  move    Put lists in a folder (made if it's new), or take them out of theirs
  order   Put a list just before or after another list in its folder
  merge   Move every open task of a list into another, keeping everything each holds, and optionally delete the emptied list
  help    Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
