tests/snapshots/cli_help__cli_help_lists_merge.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Move every open task of a list into another, keeping everything each holds, and optionally delete the emptied list

Each task moves as `tasks move` moves it: copied, the copy checked, then the original deleted, resuming after a crash. With --delete-source the list is deleted only once every task has moved and Microsoft To Do shows it empty, by its own operation (`<op_id>.delete`); `ms-todo undo` undoes that first, then the moves. Asks first in a terminal; anywhere else it needs --yes

Usage: ms-todo lists merge [OPTIONS] --into <TO> <FROM>

Arguments:
  <FROM>
          The list to empty, by exact name or ID

Options:
      --format <FORMAT>
          Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped]

          [possible values: table, json, jsonl, ids, csv]

      --into <TO>
          The list its tasks go to, by exact name or ID

      --include-completed
          Move its completed tasks too

      --instance <NAME>
          Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy

      --delete-source
          Delete FROM once every task has moved. With completed tasks in it, it needs --include-completed, so none is lost

      --fresh
          Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)

      --dry-run
          Show which tasks would move without changing anything

      --quiet
          Print nothing on stderr but errors: no notes and no progress

      --no-color
          No colour or bold in tables (also NO_COLOR)

      --yes
          Merge without asking

      --context <NAME|none>
          Read this command in this context (from config.toml) rather than the active one; `none` for every list

      --idempotency-key <KEY>
          Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
